// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportCollapsibleContainerControl render with buttonAriaLabel set to: some button label 1`] = `
<div
  className="collapsible-container collapsed"
>
  <div
    aria-level={5}
    className="title-container"
    role="heading"
  >
    <button
      aria-controls="content-container-some-id"
      aria-expanded="false"
      aria-label="some button label"
      className="collapsible-control"
    >
      <div>
        Some header
      </div>
    </button>
  </div>
  <div
    aria-hidden="true"
    className="collapsible-content"
    id="content-container-some-id"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`ReportCollapsibleContainerControl render with buttonAriaLabel set to: undefined 1`] = `
<div
  className="collapsible-container collapsed"
>
  <div
    aria-level={5}
    className="title-container"
    role="heading"
  >
    <button
      aria-controls="content-container-some-id"
      aria-expanded="false"
      className="collapsible-control"
    >
      <div>
        Some header
      </div>
    </button>
  </div>
  <div
    aria-hidden="true"
    className="collapsible-content"
    id="content-container-some-id"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`ReportCollapsibleContainerControl render with containerClassName set to: a-container 1`] = `
<div
  className="collapsible-container a-container collapsed"
>
  <div
    aria-level={5}
    className="title-container"
    role="heading"
  >
    <button
      aria-controls="content-container-some-id"
      aria-expanded="false"
      className="collapsible-control"
    >
      <div>
        Some header
      </div>
    </button>
  </div>
  <div
    aria-hidden="true"
    className="collapsible-content"
    id="content-container-some-id"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`ReportCollapsibleContainerControl render with containerClassName set to: undefined 1`] = `
<div
  className="collapsible-container collapsed"
>
  <div
    aria-level={5}
    className="title-container"
    role="heading"
  >
    <button
      aria-controls="content-container-some-id"
      aria-expanded="false"
      className="collapsible-control"
    >
      <div>
        Some header
      </div>
    </button>
  </div>
  <div
    aria-hidden="true"
    className="collapsible-content"
    id="content-container-some-id"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`ReportCollapsibleContainerControl render with contentClassName set to: content-class-name-a 1`] = `
<div
  className="collapsible-container collapsed"
>
  <div
    aria-level={5}
    className="title-container"
    role="heading"
  >
    <button
      aria-controls="content-container-some-id"
      aria-expanded="false"
      className="collapsible-control"
    >
      <div>
        Some header
      </div>
    </button>
  </div>
  <div
    aria-hidden="true"
    className="collapsible-content"
    id="content-container-some-id"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`ReportCollapsibleContainerControl render with contentClassName set to: undefined 1`] = `
<div
  className="collapsible-container collapsed"
>
  <div
    aria-level={5}
    className="title-container"
    role="heading"
  >
    <button
      aria-controls="content-container-some-id"
      aria-expanded="false"
      className="collapsible-control"
    >
      <div>
        Some header
      </div>
    </button>
  </div>
  <div
    aria-hidden="true"
    className="collapsible-content"
    id="content-container-some-id"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`ReportCollapsibleContainerControl render with id set to: some id 1`] = `
<div
  className="collapsible-container collapsed"
>
  <div
    aria-level={5}
    className="title-container"
    role="heading"
  >
    <button
      aria-controls="content-container-some id"
      aria-expanded="false"
      className="collapsible-control"
    >
      <div>
        Some header
      </div>
    </button>
  </div>
  <div
    aria-hidden="true"
    className="collapsible-content"
    id="content-container-some id"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`ReportCollapsibleContainerControl render with id set to: undefined 1`] = `
<div
  className="collapsible-container collapsed"
>
  <div
    aria-level={5}
    className="title-container"
    role="heading"
  >
    <button
      aria-controls="content-container-undefined"
      aria-expanded="false"
      className="collapsible-control"
    >
      <div>
        Some header
      </div>
    </button>
  </div>
  <div
    aria-hidden="true"
    className="collapsible-content"
    id="content-container-undefined"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;
